Fixed form spacing, now aligned in the center of the page. #517

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -23,7 +23,7 @@ html {
 
 html, body, #root {
   width: 100%;
-  margin: 0;
+  margin: 0 auto !important;
   padding: 0;
 }
 
