--- a/frontend/src/styles/Form.css
+++ b/frontend/src/styles/Form.css
@@ -1,10 +1,10 @@
 .form-main-component-div {
-    margin-top: 6.8rem;
-    margin-bottom: 6.8rem;
+    margin: 0 auto;
     max-width: 120rem;
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 6.4rem 4.2rem 9.6rem 4.2rem;
 }
 
 .form-main-grid {
